--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title> PENILAIAN MUNAQASYAH TPQ GOWA </title>
+    <title> PENILAIAN MUNAQASYAH TPQ GOWA TAHAP 2 TAHUN 2023</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,12 +34,16 @@
           </div>
 				 <div class="input-box">
            <label for="Nilai" class="form-label">Nilai</label>
-              <input type="text" id="Nilai" name="Nilai" class="form-control" placeholder="Masukan nilai" required>
+              <input type="text" id="Nilai" name="Nilai" class="form-control" placeholder="Masukan nilai" onsubmit="return true">
           </div>
         <div class="button">
           <input type="submit" value="Kirim Registrasi">
         </div>
-      </form>
+		<div class="button">
+          <input type="button" onclick="location.href='https://script.google.com/macros/s/AKfycbxQMzOR8fKNnHLbU3-qG21UEFV2ZpkMfwu0xYEAZn2Bd3lRoJsSoWA1AubYDDPMZ8yPwA/exec'" value="Cek Nilai">
+		  </button>
+		</div>
+	  </form>
     </div>
   </div>
 
@@ -52,8 +56,8 @@
         form.addEventListener('submit', e => {
             e.preventDefault()
             fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => $("#form_alerts").html("<div class='alert alert-success'>Data berhasil dikirim.</div>"))
-            .catch(error => $("#form_alerts").html("<div class='alert alert-danger'>Data gagal terkirim!.</div>"))
+            .then(response => alert("Data Berhasil Terkirim"))
+            .catch(error => alert("Data Gagal Dikirim"))
         })
     </script>
 
