--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title> PENILAIAN MUNAQASYAH TPQ GOWA TAHAP 2 TAHUN 2023</title>
+    <title> PENILAIAN MUNAQASYAH TPQ GOWA </title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	 <script src="./MUNAQASYAH TAHAP 2.js"></script>
+	 <script src="./MUNAQASYAH TAHAP 2.js">
+			function openIt() {
+				const url = 'https://script.google.com/macros/s/AKfycbxQMzOR8fKNnHLbU3-qG21UEFV2ZpkMfwu0xYEAZn2Bd3lRoJsSoWA1AubYDDPMZ8yPwA/exec';
+				window.open(url);
+			}
+	 </script>
    </head>
 <body>
   <div class="container">
@@ -37,10 +42,10 @@
               <input type="text" id="Nilai" name="Nilai" class="form-control" placeholder="Masukan nilai" onsubmit="return true">
           </div>
         <div class="button">
-          <input type="submit" value="Kirim Registrasi">
+          <input type="submit" value="Kirim Nilai">
         </div>
 		<div class="button">
-          <input type="button" onclick="location.href='https://script.google.com/macros/s/AKfycbxQMzOR8fKNnHLbU3-qG21UEFV2ZpkMfwu0xYEAZn2Bd3lRoJsSoWA1AubYDDPMZ8yPwA/exec'" value="Cek Nilai">
+          <input type="button" value="Cek Nilai" onclick="window.location='https://script.google.com/macros/s/AKfycbxQMzOR8fKNnHLbU3-qG21UEFV2ZpkMfwu0xYEAZn2Bd3lRoJsSoWA1AubYDDPMZ8yPwA/exec'">
 		  </button>
 		</div>
 	  </form>
