--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
         <div id="form_alerts"></div>
         <div class="input-box";">
                     <div class="input-box">
-             <label for="Nama_TPQ" class="form-label">Nama TPQ</label>
-              <select type="text" id="countySel" name="Nama_TPQ" class="form-control" placeholder="Masukan nama TPQ" required>
-			<option value="" selected="selected">--Pilih nama TPQ--</option>
-		</select>
-         <div class="input-box">
-             <label for="Nama_Santri" class="form-label">Nomor dan Nama Santri</label>
-              <select type="text" id="stateSel" name="Nama_Santri" class="form-control" placeholder="Masukan nama santri" required>
-			<option value="" selected="selected">--Pilih nama santri--</option>
-		</select>
-           </div>
-		<div class="input-box">
              <label for="Jenis_Penilaian" class="form-label">Jenis Penilaian</label>
-              <select type="text" id="districtSel" name="Jenis_Penilaian" class="form-control" placeholder="Masukan jenis penilaian" required>
+              <select type="text" id="countySel" name="Jenis_Penilaian" class="form-control" placeholder="Masukan jenis penilaian" required>
 			<option value="" selected="selected">--Pilih jenis penilaian--</option>
 		</select>
+         <div class="input-box">
+             <label for="Nama_TPQ" class="form-label">Nama TPQ</label>
+              <select type="text" id="stateSel" name="Nama_TPQ" class="form-control" placeholder="Masukan nama TPQ" required>
+			<option value="" selected="selected">--Pilih nama TPQ--</option>
+		</select>
+           </div>
+             <label for="Nama_Santri" class="form-label">Nomor dan Nama Santri</label>
+              <select type="text" id="districtSel" name="Nama_Santri" class="form-control" placeholder="Masukan nama santri" required>
+			<option value="" selected="selected">--Pilih nama santri--</option>
+		</select>
+
           </div>
 				 <div class="input-box">
            <label for="Nilai" class="form-label">Nilai</label>
